# MKPreview

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  env.d.ts  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
design/app-layout/: grid-layout.md  grid-resizer.md  menu-bar.md  statusbar.md  toolbar.md
design/backend-fileservice/: config-store.md  dir-scanner.md  file-readwrite.md  file-watcher.md  full-text-search.md
design/build-distribute/: build-config.md  ci-cd-pipeline.md  macos-package.md  windows-package.md
design/editor/: file-save.md  mode-switch.md  source-editor.md  source-viewer.md  split-view.md
design/feature/: i18n-spec.md  mermaid-display-optimization.md  preview-element-theme-adaptation.md  preview-style-template.md  preview-theme-system.md
design/file-tree/: tree-core.md  tree-interaction.md  tree-live-update.md  tree-search.md  tree-virtual-scroll.md
design/markdown-engine/: base-element-styles.md  code-block.md  image-handling.md  katex-render.md  md-core-config.md  mermaid-render.md  (+4 more)
prd/: PRD.md
scripts/: notarize.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: file_system.rs  mod.rs  search.rs  settings.rs  watcher.rs
src-tauri/src/models/: error.rs  file_tree.rs  mod.rs  search_result.rs  settings.rs
src-tauri/src/services/: config_store.rs  dir_scanner.rs  file_watcher.rs  mod.rs
(+109 files in other folders)
