[package]
name = "mkpreview"
version = "0.1.0"
description = "跨平台 Markdown 知识库精美渲染与浏览桌面应用"
authors = ["MKPreview Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "mkpreview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "mkpreview"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
notify = "6"
notify-debouncer-full = "0.3"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
